Fix the alignment

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -32,6 +32,8 @@
 .form-group-sm p {
   font-size : 14px  !important;
   padding-left : 1px !important;
+  padding-top : 5px !important;
+  padding-bottom : 5px !important;
 }
 
 #cls_table {
